Avoid clipping embedded R SVG images.  Bootstrap sets svg overflow to hidden.

--- a/web/css/answer.css
+++ b/web/css/answer.css
@@ -106,3 +106,8 @@ but that is rather expensive.
 
 .answer svg { vertical-align: top; }
 .render-graphviz { display: inline-block; }
+
+/* R */
+div.R.svg svg
+{ overflow: visible;
+}
